# bank-bot

./: .env.example  .gitignore  AGENT_REFACTOR.md  BancoBot_AI_PRD.docx  BancoBot_AI_PRD.md  BancoBot_AI_PRD_EN.md  README.md  docker-compose.yml  walkthrough_1_run.md
agent/: .env.example  Dockerfile  debug_chat.py  debug_chat2.py  pyproject.toml  run_test_safe.sh  test_agent_manager.py  test_agent_methods.py  test_agno_db.py  test_pdf_gen.py  test_progressive_pix.py  test_real_sessions.py
agent/app/: main.py
agent/app/agents/: orchestrator.py
agent/app/api/: chat.py
agent/app/client/: backend_client.py
agent/app/core/: agent_manager.py  config.py  redis_client.py  security.py
agent/app/skills/context-retention/: SKILL.md
agent/app/skills/credit-management/: SKILL.md
agent/app/skills/escalation-skill/: SKILL.md
agent/app/skills/intent-classification/: SKILL.md
agent/app/skills/investment-recommendation/: SKILL.md
agent/app/skills/loan-simulation/: SKILL.md
agent/app/skills/manager-communication/: SKILL.md
agent/app/skills/portfolio-skill/: SKILL.md
agent/app/skills/statement-skill/: SKILL.md
agent/app/skills/transaction-skill/: SKILL.md
agent/app/toolkits/: banking_toolkit.py  credit_toolkit.py  investment_toolkit.py  loan_toolkit.py  pix_toolkit.py  session_toolkit.py  support_toolkit.py  ted_toolkit.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/mock/: data.py  seed.py
backend/tests/: test_auth_queries.py  test_health.py
(+24 files in other folders)
